# AstroTrueFlat

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
AstroTrueFlat/: AstroTrueFlat.cpp  AstroTrueFlat.h  CMakeLists.txt  Gui.cpp  Gui.h
AstroTrueFlat/hook/: Hook.cpp  Hook.h
AstroTrueFlat/patch/: deformtool_move.asm  deformtool_move_uwp.asm
libs/: CMakeLists.txt
